Linux utility for listing SCSI devices.

Changelog for pre-release lsscsi-0.33 [20211026] [svn: r170]
  - change '-w' output to step over designator type prefix
    (e.g. '3' for NAA)
  - add '-ww' to mean: really use
    /dev/disk/by-id/wwn-* rather than .../by-id/scsi-*
  - document that --scsi_id (-i) now is prefixed by a
    "from whence" character from "328S10"
  - add '-ii' to mean show identifier without that prefix
  - build_debian.sh: build without signatures

Changelog for released lsscsi-0.32 [20210505] [svn: r167]
  - improve NVMe device parsing (e.g. /dev/nvme0c1n2)
  - print nr_hw_queues when available for SCSI hosts
  - Remove blank line after NVMe device name with -HL
  - collect_disk_wwn_nodes: Fix WWN string copy
  - make WWN printing for NVMe more consistent with
    output from SCSI devices (e.g. with -u and -t)
  - logic to select best SCSI id (--scsi_id) to output
  - clean up warnings for gcc-10
  - build with autoconf 2.70

Changelog for released lsscsi-0.31 [20200220] [svn: r160]
  - cleanup gcc-8 warnings, no cleanup needed for gcc-9
  - fix issue where host managed ZBC devices don't
    output their size. [Fix also for RBC and CD/DVD.]
  - exclude NVMe listings when --classic given
  - fix hex counting issues
  - supply "-" for generic NVMe device one line output
    so 'lsscsi -gb' output is consistent

Changelog for released lsscsi-0.30 [20180612] [svn: r154]
  - add support for NVMe devices and controllers
    - to build without: ./configure --disable-nvme-supp
    - deselect at runtime: lsscsi --no-nvme
    - deselect SCSI devices at runtime: lsscsi N
  - add --brief for tuple + device_name(s) only
  - add --pdt (-D) for device type in hex
  - extend --size (-s) so when given three times
    the size as a logical block count is output
  - add --sz-lbs (-S) that is equivalent to '-sss'
    when used twice adds comma then logical block size
  - '-w' now decodes 128 bit WWN without truncation