@@ -1,4 +1,4 @@
-.TH lsscsi "8" "October 2021" "lsscsi\-0.33" LSSCSI
+.TH lsscsi "8" "December 2021" "lsscsi\-0.33" LSSCSI
 .SH NAME
 lsscsi \- list SCSI devices (or hosts), list NVMe devices
 .SH SYNOPSIS
