@@ -54,7 +54,7 @@ fi
 
 
 %changelog
-* Tue Oct 26 2021 - dgilbert at interlog dot com
+* Tue Dec 07 2021 - dgilbert at interlog dot com
 - fixes, minor tweaks
   * lsscsi-0.33
 * Wed May 05 2021 - dgilbert at interlog dot com
