@@ -1,6 +1,6 @@
 Linux utility for listing SCSI devices.
 
-Changelog for pre-release lsscsi-0.33 [20211026] [svn: r170]
+Changelog for pre-release lsscsi-0.33 [20211207] [svn: r171]
   - change '-w' output to step over designator type prefix
     (e.g. '3' for NAA)
   - add '-ww' to mean: really use
@@ -8,6 +8,7 @@ Changelog for pre-release lsscsi-0.33 [20211026] [svn: r170]
   - document that --scsi_id (-i) now is prefixed by a
     "from whence" character from "328S10"
   - add '-ii' to mean show identifier without that prefix
+  - clean up '-t' output for SAS (RAID) logical disks
   - build_debian.sh: build without signatures
 
 Changelog for released lsscsi-0.32 [20210505] [svn: r167]
